--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
   padding: 0;
   border: 0;
   box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
@@ -22,26 +24,32 @@ body {
   flex-direction: row;
   border: solid black 1px;
   height: 500px;
-  width: 400px;
+  max-width: 400px;
   border-radius: 10px;
   padding: 10px;
   gap: 5px;
+}
+h1{
+    max-width: 350px;  /* Sort*/
 }
 
 .calc-screen {
   border: 1px black solid;
   background: grey;
   width: 300px;
+  height: 80px;
   flex: 1 0 auto;
   margin-bottom: 10px;
+  padding: 0;
 }
 
 .calc-button {
   border: 1px solid black;
-  background: red;
+  background: pink;
   width: 80px;
   gap: 10px;
   flex: 1 0 auto;
+  font-size: 2em;
 }
 
 .calc-button,
